--- a/public/css/style.css
+++ b/public/css/style.css
@@ -208,13 +208,17 @@ button {
   border-radius: 5px;
 }
 
+.hamburger-logo {
+  display: flex;
+  transition: all 0.3s ease;
+}
+
 .nav {
   width: 100%;
 }
 @media (min-width: 640px) {
   .nav {
     display: block;
-    position: absolute;
     margin-inline-end: var(--mg-600);
     right: 0;
     z-index: 1;
@@ -231,7 +235,6 @@ button {
   margin-inline-start: var(--mg-400);
   border-radius: 50%;
   background: var(--cl-neutral-white);
-  position: absolute;
   left: 0;
   top: 0;
 }
@@ -243,6 +246,7 @@ button {
   margin: 0 auto;
   height: 2px;
   background: var(--cl-neutral-black);
+  z-index: 1;
 }
 
 .hamburger::before,
@@ -255,7 +259,7 @@ button {
   transform: translateY(-6px);
 }
 .hamburger::before:hover {
-  transform: rotate(180deg);
+  transform: rotate(90deg);
 }
 
 .hamburger::after {
@@ -268,10 +272,10 @@ button {
   position: absolute;
 }
 .nav--visible {
+  left: 0;
   visibility: visible;
-  z-index: 1;
-  min-height: 330px;
-  margin-block-start: var(--mg-600);
+  min-height: 340px;
+  margin-block-start: var(--mg-800);
   padding-block: var(--pd-700);
   display: flex;
   flex-direction: column;
@@ -290,8 +294,8 @@ button {
   }
 }
 .nav__link {
-  margin-block: var(--mg-300);
-  transition: all 0.5s ease;
+  margin-block-start: var(--mg-500);
+  transition: color 0.5s ease;
 }
 .nav__link:hover, .nav__link:focus {
   color: var(--cl-primary-blue);
@@ -307,10 +311,16 @@ button {
   background-color: var(--cl-neutral-black);
   color: var(--cl-neutral-white);
   border: 2px solid var(--cl-neutral-black);
-  transition: all 0.5s ease;
+  transition: background-color, border, color 0.5s ease;
 }
 .nav__btn:hover, .nav__btn:focus {
   background-color: var(--cl-primary-white);
   border: 2px solid var(--cl-neutral-black);
   color: var(--cl-neutral-black);
+}
+
+.nav-transition {
+  padding-block-start: 1rem;
+  padding-inline: 1rem;
+  transition: padding 0.5s ease;
 }
