--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -106,7 +106,7 @@
     color: var(--cl-primary-blue);
   }
 
-  transition: color 0.5s ease;
+  transition: color 0.3s ease-in-out;
 
   @include media.for-tablet(width.$tablet) {
     margin-inline-end: var(--mg-600);
