--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -78,6 +78,7 @@
   background-image: url(../../assets/img/paradise1.jpg);
   background-size: 100%;
   background-repeat: no-repeat;
+  background-size: cover/cover;
   width: 100%;
   height: 300px;
   margin-inline: auto;
