--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -55,6 +55,7 @@
   background-image: url(../../assets/img/paradise1.jpg);
   background-size: 100%;
   background-repeat: no-repeat;
+  background-size: cover/cover;
   width: 100%;
   height: 300px;
   margin-inline: auto;
