--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -33,14 +33,13 @@
 @media (min-width: 640px) {
   .header {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 1fr 2fr;
     margin-inline: auto;
-    justify-content: space-between;
-    align-items: center;
+    padding-block-start: var(--pd-400);
   }
 }
 
-.header__logo--mobile {
+.logo--mobile {
   display: block;
   margin-inline-start: auto;
   margin-block-start: var(--mg-400);
@@ -51,16 +50,11 @@
 }
 @media (min-width: 640px) {
   .header__logo {
-    display: block;
-    margin-block-start: var(--mg-500);
-    margin-inline-start: 0;
-    margin-inline-start: auto;
-    margin-block-start: var(--mg-400);
-    padding-inline-end: var(--mg-400);
+    display: inline;
   }
 }
 
-.header__logo__heading {
+.logo__heading {
   font-weight: 400;
 }
 
@@ -70,11 +64,12 @@
 @media (min-width: 640px) {
   .header__social {
     grid-column-start: 2;
-    margin-inline-start: var(--mg-800);
+    margin-inline-start: 0;
+    margin-block-end: 0;
   }
 }
 
-.header__social__link {
+.social__link {
   padding-inline: var(--pd-200);
 }
 
@@ -187,13 +182,14 @@
 }
 @media (min-width: 640px) {
   .nav {
-    display: inline-block;
-    position: relative;
     visibility: visible;
+    height: auto;
+    position: relative;
+    transform: translateX(0);
+    transition: none;
     grid-column-start: 3;
-    margin-inline-end: 0;
+    margin-block-start: 1rem;
     z-index: 1;
-    margin-block: 0;
   }
 }
 .nav--visible {
@@ -254,10 +250,4 @@
     border: 2px solid var(--cl-neutral-black);
     color: var(--cl-neutral-black);
   }
-}
-
-.nav-transition {
-  padding-block-start: var(--pd-500);
-  padding-inline: var(--pd-700);
-  transition: padding 0.5s ease;
 }
