--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -10,15 +10,14 @@
 
   @include media.for-tablet(width.$tablet) {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 1fr 2fr;
     margin-inline: auto;
-    justify-content: space-between;
-    align-items: center;
+    padding-block-start: var(--pd-400);
   }
 }
 
 // Mobile logo
-.header__logo--mobile {
+.logo--mobile {
   display: block;
   margin-inline-start: auto;
   margin-block-start: var(--mg-400);
@@ -27,16 +26,14 @@
 .header__logo {
   display: none;
   @include media.for-tablet(width.$tablet) {
-    display: block;
-    margin-block-start: var(--mg-500);
-    margin-inline-start: 0;
-    margin-inline-start: auto;
-    margin-block-start: var(--mg-400);
-    padding-inline-end: var(--mg-400);
+    display: inline;
+    // margin-block-start: var(--mg-500);
+    // margin-inline-start: 0;
+    // padding-inline-end: var(--mg-400);
   }
 }
 
-.header__logo__heading {
+.logo__heading {
   font-weight: 400;
 }
 
@@ -44,11 +41,12 @@
   margin-inline: auto;
   @include media.for-tablet(width.$tablet) {
     grid-column-start: 2;
-    margin-inline-start: var(--mg-800);
+    margin-inline-start: 0;
+    margin-block-end: 0;
   }
 }
 
-.header__social__link {
+.social__link {
   padding-inline: var(--pd-200);
 }
 
