tablet nav mostly working

--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -32,9 +32,9 @@
 }
 @media (min-width: 640px) {
   .header {
-    display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
-    margin-inline: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding-block-start: var(--pd-400);
   }
 }
@@ -51,6 +51,7 @@
 @media (min-width: 640px) {
   .header__logo {
     display: inline;
+    margin-block-start: var(--mg-300);
   }
 }
 
@@ -63,14 +64,9 @@
 }
 @media (min-width: 640px) {
   .header__social {
-    grid-column-start: 2;
-    margin-inline-start: 0;
-    margin-block-end: 0;
+    margin-inline-start: var(--mg-800);
+    margin-block-start: var(--mg-400);
   }
-}
-
-.social__link {
-  padding-inline: var(--pd-200);
 }
 
 .header__image {
@@ -188,7 +184,6 @@
     transform: translateX(0);
     transition: none;
     grid-column-start: 3;
-    margin-block-start: 1rem;
     z-index: 1;
   }
 }
@@ -218,6 +213,7 @@
   }
 }
 .nav__link {
+  margin-inline: auto;
   margin-block-start: var(--mg-500);
   transition: color 0.3s ease-in-out;
 }
@@ -227,12 +223,13 @@
 @media (min-width: 640px) {
   .nav__link {
     margin-inline-end: var(--mg-600);
+    margin-block-start: var(--mg-500);
     color: var(--cl-neutral-black);
-    margin-block-start: var(--mg-300);
   }
 }
 
 .nav__btn {
+  cursor: pointer;
   width: 100%;
   background-color: var(--cl-neutral-black);
   color: var(--cl-neutral-white);
@@ -245,6 +242,11 @@
   color: var(--cl-neutral-black);
 }
 @media (min-width: 640px) {
+  .nav__btn {
+    width: 7rem;
+    margin-block: var(--mg-800);
+    margin-block: 0;
+  }
   .nav__btn:hover, .nav__btn:focus {
     background-color: var(--cl-neutral-white);
     border: 2px solid var(--cl-neutral-black);
