Header almost done

--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -35,7 +35,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-block-start: var(--pd-400);
+    padding-block-start: 0.25rem;
   }
 }
 
@@ -51,7 +51,7 @@
 @media (min-width: 640px) {
   .header__logo {
     display: inline;
-    margin-block-start: var(--mg-300);
+    margin-block-start: 0.5rem;
   }
 }
 
@@ -65,8 +65,12 @@
 @media (min-width: 640px) {
   .header__social {
     margin-inline-start: var(--mg-800);
-    margin-block-start: var(--mg-400);
+    margin-block-start: 0.9rem;
   }
+}
+
+.social__link {
+  padding-inline: var(--pd-300);
 }
 
 .header__image {
@@ -174,7 +178,7 @@
   height: 0;
   position: absolute;
   transform: translateX(400px);
-  transition: transform 0.5s ease-in;
+  transition: transform 0.5s ease;
 }
 @media (min-width: 640px) {
   .nav {
@@ -188,9 +192,9 @@
   }
 }
 .nav--visible {
+  visibility: visible;
   left: 0;
   width: 100%;
-  visibility: visible;
   min-height: 340px;
   margin-block-start: var(--mg-800);
   padding-block: var(--pd-700);
@@ -223,7 +227,7 @@
 @media (min-width: 640px) {
   .nav__link {
     margin-inline-end: var(--mg-600);
-    margin-block-start: var(--mg-500);
+    margin-block-start: 1.5rem;
     color: var(--cl-neutral-black);
   }
 }
@@ -234,7 +238,7 @@
   background-color: var(--cl-neutral-black);
   color: var(--cl-neutral-white);
   border: 2px solid var(--cl-neutral-black);
-  transition: background-color, border, color 0.5s ease;
+  transition: background-color, border, color, background-color 0.5s ease-in-out;
 }
 .nav__btn:hover, .nav__btn:focus {
   background-color: var(--cl-primary-white);
@@ -244,8 +248,7 @@
 @media (min-width: 640px) {
   .nav__btn {
     width: 7rem;
-    margin-block: var(--mg-800);
-    margin-block: 0;
+    margin-block-start: 1rem;
   }
   .nav__btn:hover, .nav__btn:focus {
     background-color: var(--cl-neutral-white);
