--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -59,20 +59,6 @@
   font-weight: 400;
 }
 
-.header__social {
-  margin-inline: auto;
-}
-@media (min-width: 640px) {
-  .header__social {
-    margin-inline-start: var(--mg-800);
-    margin-block-start: 0.9rem;
-  }
-}
-
-.social__link {
-  padding-inline: var(--pd-300);
-}
-
 .header__image {
   background-image: url(../../assets/img/paradise1.jpg);
   background-size: 100%;
@@ -95,6 +81,24 @@
   }
 }
 
+.header__social {
+  margin-inline: auto;
+}
+@media (min-width: 640px) {
+  .header__social {
+    margin-inline-start: var(--mg-800);
+    margin-block-start: 0.9rem;
+  }
+}
+
+.social__link {
+  padding-inline: var(--pd-300);
+}
+
+.header__social {
+  display: flex;
+}
+
 .header__social__icon {
   color: #000;
   width: 1rem;
@@ -102,6 +106,8 @@
 }
 .header__social__icon--twitter, .header__social__icon--youtube, .header__social__icon--github {
   transition: all 0.3s ease-in-out;
+  margin-inline: 0;
+  padding-inline: 0;
 }
 .header__social__icon--twitter:hover, .header__social__icon--twitter:focus {
   color: var(--cl-twitter);
@@ -115,6 +121,27 @@
 .header__social__icon--github:hover, .header__social__icon--github:focus {
   color: var(--cl-neutral-white);
   background-color: #000;
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+  height: 50vh;
+}
+
+.hero__heading {
+  font-size: 2.5rem;
+  font-weight: 300;
+  max-width: 50%;
+  padding-inline-end: var(--pd-500);
+}
+@media (min-width: 640px) {
+  .hero__heading {
+    font-size: 2.5rem;
+    font-weight: 300;
+    max-width: 50%;
+    padding-inline-end: var(--pd-500);
+  }
 }
 
 .btn {
@@ -207,6 +234,12 @@
   transition: transform 0.5s ease;
 }
 
+.nav-transition {
+  padding-block-start: var(--pd-500);
+  padding-inline: var(--pd-700);
+  transition: padding 0.5s ease;
+}
+
 @media (min-width: 640px) {
   .nav-toggle {
     display: none;
@@ -219,6 +252,8 @@
 .nav__link {
   margin-inline: auto;
   margin-block-start: var(--mg-500);
+  font-weight: 600;
+  letter-spacing: 1px;
   transition: color 0.3s ease-in-out;
 }
 .nav__link:hover, .nav__link:focus {
