--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -12,12 +12,13 @@
   font-size: 2.5rem;
   font-weight: 300;
   max-width: 50%;
-  padding-inline-end: var(--pd-500);
+  padding-inline-start: var(--pd-700);
 
   @include media.for-tablet(width.$tablet) {
     font-size: 2.5rem;
     font-weight: 300;
     max-width: 50%;
+    padding-inline-start: 0;
     padding-inline-end: var(--pd-500);
   }
 }
