--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -138,10 +138,11 @@
 @media (min-width: 640px) {
   .hero__heading {
     font-size: 2.5rem;
-    font-weight: 300;
+    font-weight: 200;
     max-width: 50%;
     padding-inline-start: 0;
     padding-inline-end: var(--pd-500);
+    margin-inline-end: var(--mg-500);
   }
 }
 
