--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -16,9 +16,10 @@
 
   @include media.for-tablet(width.$tablet) {
     font-size: 2.5rem;
-    font-weight: 300;
+    font-weight: 200;
     max-width: 50%;
     padding-inline-start: 0;
     padding-inline-end: var(--pd-500);
+    margin-inline-end: var(--mg-500);
   }
 }
