--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -6,13 +6,16 @@
   display: flex;
   align-items: center;
   // justify-content: center;
-  height: 50vh;
+  @include media.for-tablet(width.$tablet) {
+    height: 50vh;
+  }
 }
 .hero__heading {
   font-size: 2.5rem;
   font-weight: 300;
   max-width: 50%;
   padding-inline-start: var(--pd-700);
+  padding-block-start: var(--pd-500);
 
   @include media.for-tablet(width.$tablet) {
     font-size: 2.5rem;
@@ -21,5 +24,16 @@
     padding-inline-start: 0;
     padding-inline-end: var(--pd-500);
     margin-inline-end: var(--mg-500);
+  }
+}
+
+.hero__heading--2 {
+  @include media.for-tablet(width.$tablet) {
+    background-color: var(--cl-neutral-white);
+    max-width: 100%;
+    padding: 0;
+    padding-block-end: 3rem;
+    margin-block-start: 4rem;
+    margin-inline-end: 0;
   }
 }
